# backend-vitrine-patrimonio

./: .env.exemple  .gitignore  Dockerfile  app.py  compose.yml  database.py  desfazimento.py  form  json.json  pyproject.toml  teste.py
vitrine/: __init__.py
vitrine/dao/: __init__.py  dao_formulario.py  dao_patrimonio.py  dao_transferencia.py  dao_user.py
vitrine/models/: __init__.py
vitrine/rest/: rest_formulario.py  rest_institution.py  rest_transferencia.py  rest_user.py  rest_vitrine.py
